fixed some spacing

--- a/index.css
+++ b/index.css
@@ -117,7 +117,7 @@ a:hover{
 }
 
 .subject-body{
-    padding: 5vw;
+    padding: 2vw;
     font-size: 3vw;
 }
 
@@ -176,6 +176,10 @@ a:hover{
     flex-direction: column;
     width: 50vh;
 
+}
+
+#skills-title{
+    padding-top: 20vh;
 }
 
 .skills-box-row{
@@ -384,6 +388,7 @@ a:hover{
 }
 */
 #my-projects-title{
+    padding-top: 20vh;
     padding-bottom: 10vh;
 }
 
